2000-03-10    <dark@wapit.com>

	* utils/run_kannel_box.c: New utility, a wrapper that runs as
	  a daemon and spawns a given box.  If the box dies, the wrapper
	  will spawn a new one.  It will die and kill its box if it
	  gets SIGINT, SIGQUIT, or SIGTERM.
	* Makefile.in: add a line for run_kannel_box.c

Fri Mar 10 13:34:59 2000  Lars Wirzenius  <liw@wapit.com>

	* configure.in: Check for xmlDocGetRootElement instead of
	xmlParseMemory so as to find only newer versions of libxml.
	(Fix from Ben Fowler <wapdev@leedsnet.com>.)
	
	* gwlib/conffile.c: Removed spurious Ctrl-M from end of line.
	(From Ben Fowler.)
	
2000-03-10    <rpr@rpr.wapit.com>

	* gw/smsc_interface.def, gw/sms_msg.h: more data about 
	SMSC interface

2000-03-10    <rpr@rpr.wapit.com>

	* gw/bearerbox.c, gw/kannel.conf, test/sample.conf: renamed
	wap-port to wapbox-port and sms-port to smsbox-port, to avoid any
	future confusion. Old names still work.

	* gw/smsc_sema.c: added a name to smsc

Thu Mar  9 11:05:14 CET 2000	Patrick Schaaf	<bof@bof.de>

	* gw/wapbox.c, gw/kannel.wapconf: cleanup, removed
	test-heartbeat-thread logging support from source and config.

Thu Mar  9 19:17:43 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/bearerbox.c: Commented out an assert that seems to be too much.
	
	* gw/smsbox.c: Added a missing mutex_lock to main_loop.

Thu Mar  9 17:48:33 2000  Lars Wirzenius  <liw@wapit.com>

	* Makefile.in: Moved -D_REENTRANT to before @CFLAGS@ so that someone
	can undefine it when calling configure.in, if they really want it.
	(Also defined to 1, not empty, just in case.)

2000-03-09    Derry Hamilton  <rasilon@tardis.ed.ac.uk>
	
	* Makefile.in:  Added -D_REENTRANT to CFLAGS
	
2000-03-09    <rpr@rpr.wapit.com>

	* gwlib/octstr.c: fixed stupid error in octstr_recv

Wed Mar  8 16:53:24 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wtp.c: Fixed or commented away broken list handling.
	
	* gwlib/octstr.[ch]: Fixed octstr_search_char_from. Also changed its