@@ -1,3 +1,9 @@
+Fri Mar 10 14:52:19 2000  Lars Wirzenius  <liw@wapit.com>
+
+	* gw/smsc_emi.c, gw/wsp.c, gwlib/gwmem.c, gwlib/http.c,
+	gwlib/thread.c, test/test_wml.c: Fixed int/pointer size and
+	int/size_t size differences in various places.
+
 2000-03-10    <dark@wapit.com>
 
 	* utils/run_kannel_box.c: New utility, a wrapper that runs as
